gcc/testsuite/rust/rustc/ui/parser/missing-expression-in-for-loop.rs
fn main() {
    for i in {
// { dg-error "" "" { target *-*-* } .-1 }
    }
}

